fix: flash of invisible text

--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -2,28 +2,33 @@
     font-family: "Metropolis";
     src: url("Metropolis-Black.woff");
     font-weight: 900;
+    font-display: swap;
 }
 
 @font-face {
     font-family: "Metropolis";
     src: url("Metropolis-ExtraBold.woff");
     font-weight: 800;
+    font-display: swap;
 }
 
 @font-face {
     font-family: "Metropolis";
     src: url("Metropolis-Bold.woff");
     font-weight: 700;
+    font-display: swap;
 }
 
 @font-face {
     font-family: "Metropolis";
     src: url("Metropolis-SemiBold.woff");
     font-weight: 600;
+    font-display: swap;
 }
 
 @font-face {
     font-family: "Metropolis";
     src: url("Metropolis-Medium.woff");
     font-weight: 500;
+    font-display: swap;
 }
